# Chat_API

./: .env.example  .gitignore  JS_CONVERSION.md  README.md  _headers  asset-manifest.json  gemini.ps1  index.html  listmodel.cjs  move-js-files.ps1  move-ts-files.js  package-lock.json  package.json  setup.md  start-servers.bat  test-providers.js  test.js  tsconfig.json
Microservice/model-categorizer-rust/: Cargo.toml  build.rs  categorize-worker.js
Microservice/model-categorizer-rust/src/: main.rs
Microservice/model-categorizer-rust/src/classifiers/: classifier.rs  context_resolver.rs  default_models.rs  mod.rs  pattern_matcher.rs
Microservice/model-categorizer-rust/src/handlers/: mod.rs  utils.rs
Microservice/model-categorizer-rust/src/models/: mod.rs
frontend/: .env.development  .firebaserc  .gitignore  .stylelintrc.json  API_DOCUMENTATION.md  README-OPTIMIZATION.md  bundle-report.txt  canbeoptimized.md  chatstructure.md  craco.config.js  firebase.json  index.html  migrationplan.md  package-lock.json  package.json  postcss.config.js  prerender.js  reactplan.md  vite.config.js  vitest.config.js  working.md
oldreadme/: FrontendGuide.md  canbeoptimized.md  original_implementation.md
scripts/: compare-gemini-streaming.js  compare-streaming.js  debug-streaming.js  list-gemini-models.ps1  list-gemini-models.sh  load-test.js  test-gemini-streaming.js  test-streaming.js  verify-token-fix.js
server/: .gitignore  FrontendGuide.md  README.md  docker-compose.yml  frontendauthguide.md  migrationplan.md  package-lock.json  package.json  test-providers.js
(+3271 files in other folders)
